# hermes-mobile

./: .gitignore  .loop-env.example  .wait-and-build.sh  .wait-and-test-broad.sh  .xcode-cloud-trigger  CLAUDE.md  CODEX-LANE.md  CONDUCTOR-BOOTSTRAP.md  CONTRACT-DEPATCH.md  CORE-PATCHES.md  DEV-ENV-MIGRATION.md  LINEAR-BACKFILL-SPEC.md  MANIFEST.in  RELEASE_NOTES.md  SEAM-LEDGER.md  hermes_state.py  pyproject.toml  run_agent.py
.agent-memory/: MEMORY.md  feedback_agent_imperative_prompting.md  feedback_api_key_scoping.md  feedback_codex_local_adapter_stall.md  feedback_model_tiering_policy.md  feedback_no_computer_use_for_sim.md  feedback_paperclip_api_key_scoping.md  feedback_role_boundaries.md  feedback_root_cause_discipline.md  feedback_scan_vs_pickup.md  feedback_telegram_routing.md  feedback_token_budget_discipline.md  feedback_velocity_model.md  ops_swbbuildservice_wedge.md  project_agentic_os.md  project_astrology_brain_ingest.md  project_git_factory_labels.md  project_git_factory_pipeline.md  project_gstack_adapter_split.md  project_gstack_hierarchy.md  project_hermes_mobile.md  project_llamacpp_turboquant_setup.md  project_openclaw_stack.md  project_oppusy_bridge_only.md  project_paperclip_decommissioned.md  project_paperclip_execution_policy.md  project_pulse_research.md  project_translation_app.md  project_weave.md  user_location.md
.claude/: TEAM-BOOTSTRAP.md  settings.json
agent/: conversation_compression.py
cron/: jobs.py  session_retention.py
docs/: ABH519-PHASE0-DEVICE-LOG-EVIDENCE.md  ABH519-PHASE1-TRANSPARENT-PROXY-EVIDENCE.md  ABH519-PHASE2-IOS-VERTICAL-SLICE-EVIDENCE.md  ABH519-PHASE3-PARITY-EVIDENCE.md  ABH519-PHASE4-DELETION-EVIDENCE.md  ABH519-POST-MERGE-HARDENING-EVIDENCE.md  CODEX-ABH519-HANDOFF.md  CODEX-ABH519-ROUND2-HANDOFF.md  CODEX-ABH519-V019-SIMPLIFICATION-PROPOSAL.md  CODEX-ABH519-V019-SIMPLIFICATION-REVIEW.md  CODEX-NATIVE-STOCK-MOBILE-HANDOFF.md  DAILY-DRIVER-QA1-SPEC.md  DAILY-DRIVER-QA2-SPEC.md  DAILY-DRIVER-QA3-SPEC.md  DAILY-DRIVER-SPEC.md  INTERACTION-CONTRACT.md  LOCAL-FIRST-A0-AUTHORITY-EPOCH-CONTRACT.md  LOCAL-FIRST-B1-DISPLAY-LINEAGE-CONTRACT.md  LOCAL-FIRST-TRANSCRIPT-PRO-REVIEW-RECONCILIATION.md  LOCAL-FIRST-TRANSCRIPT-SPEC.md  MOBILE-RELAY-CLIENT-DESIGN.md  PR243-CURRENT-HEAD-PHYSICAL-PUSH-EVIDENCE.md  RELAY-HARDENING-HANDOVER.md  RELAY-PHONE-PROTOCOL.md  RELAY-SOAK-SPEC.md  RELAY-STOCK-EVENT-NOTIFICATIONS-EVIDENCE.md  RESUMABLE-STREAM-PROTOCOL.md  ROUND4-LEAN-PLAN.md  SMOOTHNESS-SPEC.md  STOCK-PROTOCOL-MAP.md  TRANSCRIPT-DESIGN-SPEC.md  WAVE-ROADMAP.md  autonomous-development-loops.md  qa1-root-causes.md  qa2-image-ledger.md  qa2-root-causes.md  qa3-image-ledger.md  qa3-root-causes.md  qa3-s12-manual-device-proof.md
gateway/: run.py  session.py
hermes_cli/: config.py  copilot_auth.py  kanban_db.py  main.py  plugins.py  profiles.py  service_manager.py  web_server.py
plugins/hermes-mobile/packaging/: .gitignore  README-pypi.md  pyproject.toml
relay/: .gitignore  README.md  pyproject.toml  requirements-dev.txt
relay/hermes_relay/: __init__.py  __main__.py  app.py  bus.py  downstream.py  durable_state.py  gateway_client.py  notifications.py  notifier.py  plugin_bridge.py  reframer.py  runtime_lock.py  secure_files.py  session_state.py  types.py
relay/hermes_relay/v2/: __init__.py  app.py  crypto.py  device_router.py  enrollment.py  errors.py  hub_client.py  identity.py  inbound.py  notification_sender.py  pairing.py  projection.py  protection.py  protocol.py  push_client.py  reframer_state.py  revocation.py  rpc.py  service_url.py  storage.py
relay/scripts/: ai.hermes.relay.plist  decommission-old-relays.sh  install-service.sh  launch_isolated_gateway.sh  launch_relay.sh  run-relay.sh
relay/tests/: test_attach.py  test_bus.py  test_cli.py  test_downstream.py  test_durable_state.py  test_gateway_client.py  test_install_service_render.py  test_notifications.py  test_notifier.py  test_notifier_live_send.py  test_owned_release.py  test_plugin_bridge.py  test_reframer.py  test_round4_lane_stubs.py  test_session_state.py  test_session_state_cap.py  test_skeleton_imports.py  test_transparent_proxy.py  test_types.py
relay/tests/fixtures/: ws_events_raw.json
relay/tests/v2/: test_app.py  test_device_router.py  test_enrollment.py  test_hub_client.py  test_inbound.py  test_notification_sender.py  test_pairing.py  test_protection_rotation.py  test_protocol_crypto.py  test_reframer_state.py  test_revocation.py  test_rpc.py  test_storage.py
scripts/: asc-notes.mjs  asc-poll.mjs  backfill-machinery-sessions.py  changed_tests.py  check_plugin_core_symbols.py  dev-gateway.sh  export-public.sh  gen-release-notes.sh  hermes-shared-tui.sh  install-loop-digest.sh  ios-build.sh  ios-provider-key-survival-evidence.sh  loop-dedupe-check.sh  loop-digest.mjs  loop-linear-query.mjs  loop-scope-check.sh  pipeline-status.mjs  promote-to-live.sh  promote-to-staging.sh  qa1-cold-open-evidence.sh  qa3_s13_convergence_proof.py  r4-void-evidence.sh  release.py  run_tests_parallel.py  seams.patch  ship-testflight.sh  staging-gateway.sh  ui-test.sh  verify.sh  worktree-reap.sh
server/: compose.hrp2.yml  compose.hub-only.yml
tests/: conftest.py  test_hermes_state.py  (+12 more)
(+874 files in other folders)
