[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-relay"
version = "0.2.0"
description = "Authenticated byte-transparent WS/HTTP proxy for Hermes Mobile."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Hermes Mobile" }]

dependencies = [
    "aiohttp>=3.11",
    "websockets>=12",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
hermes-relay = "hermes_relay.__main__:main"

[tool.setuptools]
packages = ["hermes_relay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
